--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "boxicons": "^1.9.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-particles-js": "^2.4.2",
     "react-pose": "^4.0.6",
-    "react-router-dom": "^4.3.1",
+    "react-router": "^4.4.0-beta.6",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "2.1.3",
-    "react-spring": "^8.0.7"
+    "react-spring": "^8.0.7",
+    "use-react-router": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
