--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.1",
     "react-particles-js": "^2.4.2",
     "react-pose": "^4.0.6",
+    "react-responsive": "^6.1.1",
     "react-router": "^4.4.0-beta.6",
     "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "2.1.3",
