--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-particles-js": "^2.4.2",
     "react-pose": "^4.0.6",
     "react-responsive": "^6.1.1",
+    "react-reveal": "^1.2.2",
     "react-router": "^4.4.0-beta.6",
     "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "2.1.3",
